fix testSameHostCheckWithExplain